//protocol=11607;
option java_package = "com.chuangyou.common.protobuf.pb.soul";
option java_outer_classname = "SoulInfoAddExpReqProto";

//吃道具加经验--增加魂魄
message SoulInfoAddExpReqMsg{
	required int32 item1 = 1; //加经验的几个道具
	required int32 itemCount1 = 2;
	required int32 item2 = 3;
	required int32 itemCount2 = 4;
	required int32 item3 = 5;
	required int32 itemCount3 = 6;
}