//protocol= 738;
option java_package = "com.chuangyou.common.protobuf.pb.vip";
option java_outer_classname = "ResHandselVipMsgProto";

//购买或赠送vip成功
message ResHandselVipMsg {
	required string name=1;//赠送者昵称
	required int32 vipId=2;//赠送的vipid
	required int64 vipTimeLimit = 3;//vip 到期时间 （时间戳
	required int64 vipInterimTimeLimit=4;//临时vip 到期时间（时间戳
}